--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br><br>
 
     <button id="btn">calculate</button>
-    <button type="reset">reset</button>
+    <button value="reset">reset</button>
 
     <p id="result"></p>
     <p id="result2" style="font-size: 30px;"></p>
